inicia trasfers swagger
